--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="prism.css">
     <link rel="icon" href="favicon.png">
+    <link rel="stylesheet" media="screen and (max-width : 500px )" href="responsive.css">
     <script src="prism.js"></script>
 </head>
 
@@ -21,7 +22,7 @@
     </header>
 
     <div class="container">
-        <section class="section">
+        <section class="section" id="structure">
             <h1>Structure</h1>
             <div class="desc">This is the basic template or barebone structure of HTML.</div>
             <div class="code-block">
@@ -284,6 +285,10 @@ Age: &lt;input max="90" min="1" name="age" step="1" type="number" value="18" /&g
             </div>
         </section>
     </div>
+
+    <footer>
+        Made in love 🧡❤💚 by Mahesh Sharma
+    </footer>
     <script src="script.js"></script>
 </body>
 
