--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Cheatsheet</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="prism.css">
-    <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" media="screen and (max-width : 500px )" href="responsive.css">
-    <script src="prism.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prism.css">
+    <link rel="icon" href="images/favicon.png">
+    <link rel="stylesheet" media="screen and (max-width : 500px )" href="css/responsive.css">
+    <script src="js/prism.js"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <img class="logo" src="logo.png" alt="">
+            <img class="logo" src="images/logo.png" alt="">
             HTML Cheetsheet
         </nav>
     </header>
@@ -289,7 +289,7 @@ Age: &lt;input max="90" min="1" name="age" step="1" type="number" value="18" /&g
     <footer>
         Made in love 🧡❤💚 by Mahesh Sharma
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
